// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation-accordion An active (hidden) page without a parent renders as expected 1`] = `
<nav
  className="mx-neg12"
>
  <ul>
    <li>
      <div
        className="px12 flex txt-uppercase txt-fancy round-full w-full"
      >
        <a
          className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
          href="page-one"
        >
          Title one
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`navigation-accordion Basic NavigationAccordion renders as expected 1`] = `
<nav
  className="mx-neg12"
>
  <ul>
    <li>
      <div
        className="px12 flex txt-uppercase txt-fancy round-full w-full flex flex--space-between-main"
      >
        <a
          className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
          href="/dr-ui/guides/"
        >
          Guides
        </a>
        <button
          aria-controls="menu-guides"
          aria-expanded={false}
          aria-label="Toggle Guides menu"
          className="flex-child-no-shrink color-blue-on-hover px12 px0-mm"
          onClick={[Function]}
          value="Guides"
        >
          <svg
            aria-hidden="true"
            className="events-none icon inline-block align-t"
            data-testid="icon-chevron-down"
            focusable="false"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
          <span
            style={
              Object {
                "border": 0,
                "clip": "rect(0, 0, 0, 0)",
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              }
            }
          >
            chevron-down
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        className="px12 flex txt-uppercase txt-fancy round-full w-full flex flex--space-between-main"
      >
        <a
          className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
          href="/dr-ui/examples/"
        >
          Examples
        </a>
        <button
          aria-controls="menu-examples"
          aria-expanded={false}
          aria-label="Toggle Examples menu"
          className="flex-child-no-shrink color-blue-on-hover px12 px0-mm"
          onClick={[Function]}
          value="Examples"
        >
          <svg
            aria-hidden="true"
            className="events-none icon inline-block align-t"
            data-testid="icon-chevron-down"
            focusable="false"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
          <span
            style={
              Object {
                "border": 0,
                "clip": "rect(0, 0, 0, 0)",
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              }
            }
          >
            chevron-down
          </span>
        </button>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`navigation-accordion Titles with tags renders as expected 1`] = `
<nav
  className="mx-neg12"
>
  <ul>
    <li>
      <div
        className="px12 flex txt-uppercase txt-fancy round-full w-full bg-blue-faint color-blue-deep flex flex--space-between-main"
      >
        <a
          className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
          href="page-one"
        >
          Title one
        </a>
        <button
          aria-controls="menu-title-one"
          aria-expanded={false}
          aria-label="Toggle Title one menu"
          className="flex-child-no-shrink color-blue-on-hover px12 px0-mm"
          onClick={[Function]}
          value="Title one"
        >
          <svg
            aria-hidden="true"
            className="events-none icon inline-block align-t"
            data-testid="icon-chevron-down"
            focusable="false"
            style={
              Object {
                "height": 18,
                "width": 18,
              }
            }
          >
            <use
              xlinkHref="#icon-chevron-down"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
          <span
            style={
              Object {
                "border": 0,
                "clip": "rect(0, 0, 0, 0)",
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
                "wordWrap": "normal",
              }
            }
          >
            chevron-down
          </span>
        </button>
      </div>
    </li>
    <li>
      <div
        className="px12 flex txt-uppercase txt-fancy round-full w-full"
      >
        <a
          className="flex-child-grow color-blue-on-hover py6 py3-mm txt-spacing05"
          href="page-two"
        >
          Title two
          <span
            className="ml6 relative"
            style={
              Object {
                "top": -1,
              }
            }
          >
            <div
              className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-xs"
              data-state="closed"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onPointerDown={[Function]}
              onPointerLeave={[Function]}
              onPointerMove={[Function]}
              style={Object {}}
            >
              <svg
                aria-hidden="true"
                className="events-none icon inline-block align-t"
                data-testid="icon-lightning"
                focusable="false"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-lightning"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                lightning
              </span>
            </div>
          </span>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;
